--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2823,21 +2823,13 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }*/
  }
 
- @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+ @media only screen  and (min-width: 1024px) and (max-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
     .journytextblock{
       width: 76% ! important;
     }
   }
 
-@media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
    .roadjourny img{
     left:400px ! important;
    }
@@ -2912,11 +2904,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     top: 1123px ! important;
    }
   } 
-  @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+  @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
    .roadjourny img{
     left:400px ! important;
    }
@@ -3956,9 +3944,155 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       width: 300px ! important;
   }
 }
-@media only screen 
-  and (device-width: 1680px) 
-  and (device-height: 1050px) 
+@media only screen and (device-width: 1680px) and (device-height: 1050px) 
+ {
+      .roadjourny img{
+    left:-249px ! important;
+  }
+  .add1{
+    opacity: 1;
+    left: 387px ! important;
+  }
+  .add9{
+    display: none;
+  }
+  .Journycaro1{
+    opacity: 1;
+    top:265px ! important;
+    left: 552px ! important;
+  }
+  .Journycaro2{
+    opacity: 1;
+    left: 248px !important;
+    top: 411px ! important;
+  }
+  .Journycaro3 {
+    opacity: 1;
+    left: 700px !important;
+    top: 591px ! important;
+  }
+  .add4{
+    opacity: 1;
+   left: -476px ! important;
+    top: 461px ! important;
+  }
+  
+  .Journycaro3 p{
+    text-align: left ! important;
+  }
+  .Journycaro3 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4 p{
+    text-align: left ! important;
+  }
+  .Journycaro4 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4{
+    opacity: 1;
+    top: 761px ! important;
+    left: 200px ! important;
+    text-align: right ! important;
+
+  }
+  .add3 {
+    opacity: 1;
+    left: 603px ! important;
+    top: 280px ! important;
+  }
+  .Journycaro6 {
+    opacity: 1;
+    top: 810px ! important;
+    left: 746px ! important;
+  }
+  .add6{
+    opacity: 1;
+    left: 696px ! important;
+    top: 14px ! important;
+
+  }
+  .Journycaro5{
+    opacity: 1;
+    top: 964px ! important;
+   left: 934px ! important;
+  }
+  .add5{
+    opacity: 1;
+    top: 763px ! important;
+    right: 582px ! important;
+
+  }
+  .Journycaro7 p{
+    text-align: left ! important; 
+  }
+  .Journycaro7 h3{
+    text-align: left ! important; 
+  }
+   .Journycaro8 p{
+    text-align: right ! important; 
+  }
+  .Journycaro8 h3{
+    text-align: right ! important; 
+  }
+  .Journycaro7{
+    opacity: 1;
+    top: 1119px ! important;
+    left: 939px ! important;
+  }
+  .add8{
+    opacity: 1;
+    right: -271px ! important;
+    top: 156px ! important;
+  }
+  .add10{
+    opacity: 1;
+    top: -37px ! important;
+    left: 304px ! important;
+  }
+  .Journycaro10{
+    opacity: 1;
+        left: 279px ! important;
+  }
+  .Journycaro8 {
+    opacity: 1;
+        top: 1125px ! important;
+    left: 282px ! important;
+
+
+  }
+  .Journycaro9{
+    opacity: 1;
+    left: 421px ! important;
+    top: 1308px ! important;
+  }
+  .Journycaro9 p{
+    text-align: left ! important;
+  }
+  .Journycaro9 h3{
+    text-align: left ! important;
+  }
+
+  .add7 {
+    opacity: 1;
+    left: 246px ! important;
+    top: 348px ! important;
+  }
+  .add12 {
+    left: 189px ! important;
+    top: -112px  !important;
+    opacity: 1;
+     
+   }
+   .add2{
+    opacity:1;
+    right: 431px ! important;
+   }
+   .roadjourny{
+    overflow:inherit;
+   }      
+  }   
+@media only screen and (device-width: 1680px) 
  {
       .roadjourny img{
     left:-249px ! important;
@@ -4110,163 +4244,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
 
     
   }   
-  @media only screen 
-  and (device-width: 1680px) 
- {
-      .roadjourny img{
-    left:-249px ! important;
-  }
-  .add1{
-    opacity: 1;
-    left: 387px ! important;
-  }
-  .add9{
-    display: none;
-  }
-  .Journycaro1{
-    opacity: 1;
-    top:265px ! important;
-    left: 552px ! important;
-  }
-  .Journycaro2{
-    opacity: 1;
-    left: 248px !important;
-    top: 411px ! important;
-  }
-  .Journycaro3 {
-    opacity: 1;
-    left: 700px !important;
-    top: 591px ! important;
-  }
-  .add4{
-    opacity: 1;
-   left: -476px ! important;
-    top: 461px ! important;
-  }
-  
-  .Journycaro3 p{
-    text-align: left ! important;
-  }
-  .Journycaro3 h3{
-    text-align: left ! important;
-  }
-  .Journycaro4 p{
-    text-align: left ! important;
-  }
-  .Journycaro4 h3{
-    text-align: left ! important;
-  }
-  .Journycaro4{
-    opacity: 1;
-    top: 761px ! important;
-    left: 200px ! important;
-    text-align: right ! important;
-
-  }
-  .add3 {
-    opacity: 1;
-    left: 603px ! important;
-    top: 280px ! important;
-  }
-  .Journycaro6 {
-    opacity: 1;
-    top: 810px ! important;
-    left: 746px ! important;
-  }
-  .add6{
-    opacity: 1;
-    left: 696px ! important;
-    top: 14px ! important;
-
-  }
-  .Journycaro5{
-    opacity: 1;
-    top: 964px ! important;
-   left: 934px ! important;
-  }
-  .add5{
-    opacity: 1;
-    top: 763px ! important;
-    right: 582px ! important;
-
-  }
-  .Journycaro7 p{
-    text-align: left ! important; 
-  }
-  .Journycaro7 h3{
-    text-align: left ! important; 
-  }
-   .Journycaro8 p{
-    text-align: right ! important; 
-  }
-  .Journycaro8 h3{
-    text-align: right ! important; 
-  }
-  .Journycaro7{
-    opacity: 1;
-    top: 1119px ! important;
-    left: 939px ! important;
-  }
-  .add8{
-    opacity: 1;
-    right: -271px ! important;
-    top: 156px ! important;
-  }
-  .add10{
-    opacity: 1;
-    top: -37px ! important;
-    left: 304px ! important;
-  }
-  .Journycaro10{
-    opacity: 1;
-        left: 279px ! important;
-  }
-  .Journycaro8 {
-    opacity: 1;
-        top: 1125px ! important;
-    left: 282px ! important;
-
-
-  }
-  .Journycaro9{
-    opacity: 1;
-    left: 421px ! important;
-    top: 1308px ! important;
-  }
-  .Journycaro9 p{
-    text-align: left ! important;
-  }
-  .Journycaro9 h3{
-    text-align: left ! important;
-  }
-
-  .add7 {
-    opacity: 1;
-    left: 246px ! important;
-    top: 348px ! important;
-  }
-  .add12 {
-    left: 189px ! important;
-    top: -112px  !important;
-    opacity: 1;
-     
-   }
-   .add2{
-    opacity:1;
-    right: 431px ! important;
-   }
-   .roadjourny{
-    overflow:inherit;
-   }  
-  
-
-
-    
-  }   
-@media only screen 
-  and (device-width: 1536px) 
-  and (device-height: 2048px) 
-  and (orientation: portrait){
+@media only screen and (device-width: 1536px) and (device-height: 2048px) and (orientation: portrait){
       .roadjourny img{
         display: none;
       }
@@ -4420,8 +4398,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     }
     
   }   
-  @media only screen 
-  and (device-width: 1536px) and (orientation: portrait){
+  @media only screen and (device-width: 1536px) and (orientation: portrait){
       .roadjourny img{
         display: none;
       }
@@ -4576,10 +4553,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
 
     
   }   
-  @media only screen 
-  and (device-width: 2048px) 
-  and (device-height:1536px ) 
-  and (orientation: landscape){
+  @media only screen and (device-width: 2048px) and (device-height:1536px ) and (orientation: landscape){
      .new_wizardNotefor4forJ{
     right: 63px !important;
   }
@@ -4720,9 +4694,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   
 
 }
- @media only screen 
-  and (device-width: 2048px) 
-  and (orientation: landscape){
+ @media only screen and (device-width: 2048px) and (orientation: landscape){
      .new_wizardNotefor4forJ{
     right: 63px !important;
   }
@@ -4995,6 +4967,163 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
    }
    .roadjourny{
     overflow:inherit;
+   }     
+} 
+@media only screen and (device-width : 2880px) {
+  .new_wizardNotefor4forJ{
+    right: 63px !important;
+  }
+  .roadjourny img{
+    left:-567px ! important;
+     z-index: 0! important ;
+  }
+  .add1{
+    opacity: 1;
+    left:851px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro1{
+    opacity: 1;
+    top:265px ! important;
+    left:1393px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro2{
+    opacity: 1;
+    left: 1107px !important;
+    top: 411px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro3 {
+    opacity: 1;
+    top: 543px ! important;
+    left: 1586px ! important;
+    text-align: left ! important;
+     z-index: 0! important ;
+  }
+  .add4{
+    opacity: 1;
+    left:546px ! important;
+    top: 239px ! important;
+     z-index: 0! important ;
+  }
+  
+  .Journycaro3 p{
+    text-align: left ! important;
+  }
+  .Journycaro3 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4 p{
+    text-align: right ! important;
+  }
+  .Journycaro4 h3{
+    text-align: right ! important;
+  }
+  .Journycaro4{
+    opacity: 1;
+    left: 608px !important;
+    top: 613px ! important;
+    text-align: right ! important;
+     z-index: 0! important ;
+
+  }
+  .add3 {
+    opacity: 1;
+    left: 1067px ! important;
+    top: 280px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro6 {
+    opacity: 1;
+    top: 785px ! important;
+    left: 1087px ! important;
+     z-index: 0! important ;
+  }
+  .add6{
+    opacity: 1;
+    left: 978px ! important;
+    top: -110px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro5{
+    opacity: 1;
+    top: 964px ! important;
+    left: 1799px ! important;
+     z-index: 0! important ;
+  }
+  .add5{
+    opacity: 1;
+    top: 763px ! important;
+    right: 701px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro7 p{
+    text-align: left ! important; 
+  }
+  .Journycaro7 h3{
+    text-align: left ! important; 
+  }
+   .Journycaro8 p{
+    text-align: right ! important; 
+  }
+  .Journycaro8 h3{
+    text-align: right ! important; 
+  }
+  .Journycaro7{
+    opacity: 1;
+    top: 1119px ! important;
+    left: 1808px ! important;
+     z-index: 0! important ;
+  }
+  .add8{
+    opacity: 1;
+    right: -760px ! important;
+    top: 156px ! important;
+     z-index: 0! important ;
+  }
+  .add10{
+    opacity: 1;
+     z-index: 0! important ;
+  }
+  .Journycaro10{
+    opacity: 1;
+    left: 1180px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro8 {
+    opacity: 1;
+    top: 1086px ! important;
+    left: 1042px ! important;
+     z-index: 0! important ;
+  }
+  .Journycaro9{
+    opacity: 1;
+     left: 686px ! important;
+     top: 1268px ! important;
+      z-index: 0! important ;
+  }
+  .add7 {
+    opacity: 1;
+    left: 1131px ! important;
+    top: 348px ! important;
+     z-index: 0! important ;
+  }
+  .add12 {
+    left: 1067px ! important;
+    top: -112px  !important;
+    opacity: 1;
+     
+   }
+   .add2{
+    opacity:1;
+    top:402px! important;
+    right: 331px ! important;
+     z-index: 0! important ;
+   }
+   .roadjourny{
+    overflow:inherit;
+     z-index: 0! important ;
    }  
   
    
@@ -5315,11 +5444,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
 
  }
 
- @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+ @media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
     .Journycaro4{
       display: none;
 
