--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -498,7 +498,13 @@
 @media only screen and (device-width : 411px) and (device-height : 823px) {
 
    .serflip-cardservices img{
-    margin-left: 22px ! important;
+    margin-left: 15px ! important;
+  } 
+}
+@media only screen and (device-width : 411px) {
+
+   .serflip-cardservices img{
+    margin-left: 15px ! important;
   } 
 }
 @media only screen and (device-width : 375px) and (device-height : 812px) { 
