--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -3964,4 +3964,58 @@ div.drop-container:after {
     margin-left: -93px ! important;
   }
 }
+@media only screen and (device-width : 851px) {
+  .oilimage_img {
+    width: 200px;
+  }
+  .oilimage {
+    right: 161px;
+    top: 159px;
+
+  }
+
+  .plantimage11_img {
+    width: 200px;
+  }
+  .plantimage11 {
+    right: 38px;
+    top: 304px;
+  }
+  .boat_img_size {
+    left: 45px;
+    top: 32px;
+  }
+  .waterimg {
+    left: 31px;
+    top: 205px;
+  }
+  .nexttogasimg_size {
+    width: 200px;
+  }
+  .nexttogasimage {
+    right: 295px;
+    top: 294px;
+  }
+  .boat_img2_img {
+    width: 200px;
+  }
+  .petrolimage1_img {
+    width: 200px;
+  }
+  .boat_img2 {
+    left: 117px;
+    top: 381px;
+  }
+  .waterimg2 {
+    top: 72%;
+    left: 4%;
+  }
+  .petrolimage1 {
+    right: 175px;
+    top: 424px;
+  }
+  .new_HoverDiv4{
+    margin-left: -93px ! important;
+  }
+}
 
